<resources>
    <string name="app_name">MoRent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="login_title">Login</string>
    <string name="tag">Ayo bergabung dengan kami dan \ndapatkan penawaran menarik!</string>
    <string name="swipe_right_for_login">I\'m already a member</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">9715_Yohanes Yobel</string>
    <string name="nav_header_subtitle">kelompokd@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_home">Home</string>
    <string name="action_widget">Widget</string>
    <string name="action_dialog">Dialog</string>

    <string name="menu_home">Home</string>
    <string name="menu_widget">Widget</string>
    <string name="menu_dialog">Dialog</string>

    <string name="exit">Exit</string>
    <string name="send">Send</string>
    <string name="first_title">MenuGuided9715_Yohanes Yobel</string>
    <string name="hint_widget">Please fill this widget!</string>
    <string name="hint_first_name">Your first name</string>
    <string name="hint_last_name">Your last name</string>

    <string name="theme_mode">Light Mode</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_regis_login">RegisLoginActivity</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYmFzdG90b2FnIiwiYSI6ImNrZm5yY284NjAydjMycW41a3M2cXF0Y24ifQ.5-PDA-bKZwNyrHBtFc-Wvg</string>
    <string name="navigasi">START NAVIGATION</string>
    <string name="verification">Verification</string>
    <string name="click_the_button_link_we_just_sent_you_on_your_email_address">Click the button link we just sent you on your email address.</string>
    <string name="go_to_your_gmail_app">Go to your gmail App</string>
    <string name="nama_pemesan">Nama Pemesan</string>
</resources>