<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_height="114dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/morent2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="50dp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/indigo_daisy"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_logo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_email"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_centerInParent="true"
            android:layout_above="@id/layout_password"
            app:hintEnabled="false"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:textColorHint="@color/textColor4"
                android:textColor="@color/textColor2"
                android:padding="15dp"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_password"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColor="@color/textColor2"
                android:padding="15dp"
                android:textColorHint="@color/textColor4"
                android:inputType="textPassword"
                app:hintEnabled="false"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_password"
            android:background="@drawable/btn_custom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:text="@string/login"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>