<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/verification"
            android:textSize="17sp"
            android:textColor="@color/textColor3"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/click_the_button_link_we_just_sent_you_on_your_email_address"
            android:textSize="17sp"
            android:layout_marginHorizontal="40dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/go_to_your_gmail_app"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="If you didn't receive a mail?"
            android:textSize="15sp"
            android:layout_marginHorizontal="40dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="RESEND"
            android:textColorLink="@color/design_default_color_primary"
            android:textSize="17sp"
            android:layout_marginHorizontal="40dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorYellow"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="If you have verify your email address, click the button bellow"
            android:textSize="15sp"
            android:layout_marginHorizontal="40dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:layout_marginTop="30dp" />

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_refresh_24"
            android:backgroundTint="@color/textColor5"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>